--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "repository": "git@github.com:GiovanySantos/CBLOLFantasyBE.git",
   "author": "giovanysantos <giovany.m.s@hotmail.com>",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "start": "yarn build && node ./dist/index.js",
+    "build": "babel src/index.js -d dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collect-coverage",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -19,9 +22,15 @@
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-env": "^7.23.5",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@graphql-tools/schema": "^10.0.2",
+    "esbuild": "^0.19.8",
+    "esbuild-jest": "^0.5.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
