docs: libraries documentation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,6 @@
     "import/extensions": 0,
     "no-console": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error"],
-    "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "warn"
+    "no-shadow": "off"
   }
 }
