--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "giovanysantos <giovany.m.s@hotmail.com>",
   "license": "MIT",
   "scripts": {
+    "dev": "nodemon --exec babel-node src/index.js",
     "start": "yarn build && node ./dist/index.js",
     "build": "babel src/index.js -d dist",
     "test": "jest",
@@ -24,16 +25,20 @@
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.5",
+    "@babel/node": "^7.22.19",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.23.5",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@graphql-tools/schema": "^10.0.2",
+    "babel-node": "^0.0.1-security",
     "esbuild": "^0.19.8",
     "esbuild-jest": "^0.5.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
-  }
+  },
+  "description": "a cblol based game",
+  "main": "index.js",
+  "private": false
 }
